移植储存分页服务实现到 1.12.2